# blog

./: .gitignore
client/: package-lock.json  package.json  svelte.config.js
client/src/: app.html
client/src/lib/component/: BackToTop.svelte  Controls.svelte  MusicPlayer.svelte  PlayButton.svelte  Slider.svelte  article.svelte  back_to_top.svelte  container.svelte  footer.svelte  header.svelte  main.c
client/src/lib/js/: stores.js  utility.js
client/src/routes/: +layout.svelte  +page.server.js  +page.svelte
client/src/routes/archive/: +page.server.js  +page.svelte
client/src/routes/blog/: +layout.svelte
client/src/routes/blog/[slug]/: +page.server.js  +page.svelte
server/: Cargo.toml
server/src/: a.md  error.rs  lib.rs  main.rs  model.rs  response.rs
server/src/db/: articles.rs  mod.rs
server/src/handler/: articles.rs  mod.rs  test.rs
