[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = { version = "0.4.30", features = ["serde"] }
dotenv = "0.15.0"
highlight-pulldown = "0.2.2"
lazy_static = "1.4.0"
markdown = "0.3.0"
pulldown-cmark = { version = "0.9.3", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
sqlx = { version = "0.7.1", features = ["postgres", "chrono", "runtime-tokio"] }
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
